correçoes introdução - prof danilo

--- a/textuais/introducao.tex
+++ b/textuais/introducao.tex
@@ -26,15 +26,15 @@ custo da energia elétrica.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-O Consumo de energia elétrica é um dos principais indicadores de desenvolvimento e de qualidade de vida 
+O consumo de energia elétrica é um dos principais indicadores de desenvolvimento e de qualidade de vida 
 de um país. Esse índice é tão importante que reflete diretamente no ritmo de vida de uma população, pois mostra
 se as atividades industriais de uma nação estão ou não em um bom ritmo e pode detectar se o comércio está em alta,
 devido aos bens e serviços que o povo adquiriu \cite{energia-desenvolvimento}. Porém um crescimento desordenado na população e um crescimento
 exponencial no consumo de energia pode acarretar em problemas para um determinado país.
 Analisando os dados \cite{epe-balanco-final}, o consumo de energia  
-elétrica no Brasil vem crescendo ao longo dos anos. Segundo \cite{ref-jc}, nos últimos 35 anos teve um crescimento médio de 6,72\%, após a crise que o Brasil sofreu entre os anos 2002 e 2005 houve um crescimento
+elétrica no Brasil vem crescendo ao longo dos anos. Segundo \cite{ref-jc}, nos últimos 35 anos houve um crescimento médio de 6,72\%, após a crise que o Brasil sofreu entre os anos 2002 e 2005 houve um crescimento
 de 4,91\% na demanda energética do país. A \autoref{fig:consumo_energia_total} retrata o cenário de crise energética que o Brasil vinha
-passando ao longo dos anos, até 2008 o país consumia mais do que produzia.
+passando ao longo dos anos, até 2008 o Brasil consumia mais energia elétrica do que produzia.
 
 \begin{figure}[h!]
 	\includegraphics[width=0.85\textwidth, keepaspectratio=true]{consumo_energia_total}
@@ -45,8 +45,8 @@ passando ao longo dos anos, até 2008 o país consumia mais do que produzia.
 \end{figure}
 \FloatBarrier
 
-Para poder acompanhar a crescente demanda por energia elétrica, o governo brasileiro autorizou a contrução de mais de 24 hidrelétricas \cite{governo-preve}.
-Um grande problema desse planejamento que o governo fez são os inúmeros impactos ambientais e econômicos, um exemplo prático é a usina de de Belo Monte - Rio Xingu, Pará -. Obra que foi planejada
+Para poder acompanhar a crescente demanda por energia elétrica, o governo brasileiro autorizou a construção de 24 hidrelétricas \cite{governo-preve}.
+Um grande problema desse planejamento que o governo fez são os inúmeros impactos ambientais e econômicos, um exemplo prático é a usina de de Belo Monte - Rio Xingu, Pará. Obra que foi planejada
 para ser a maior hidrelétrica do Brasil, com capacidade de abastecer 40\% das residências \cite{energia-abastece}.
 Deveria ter sido finalizada completamente e ter seu total funcionamento no segundo semestre de 2015, mas até os dias atuais não opera em 100\%. Vale salientar que a construção
 trouxe o desmatamento de áreas indígenas, alagamentos permanentes, comprometimento da fauna e flora e aumento da dificuldade dos transportes fluviais
@@ -54,9 +54,9 @@ de comunidades ribeirinhas \cite{ref-g1}.
 
 Diante da problemática do alto consumo de energia elétrica, surge uma indagação: "Construir usinas mesmo sabendo dos impactos negativos que podem surgir, ou não construí-las e
 aumentar a tarifação pelo consumo de energia visando um uso mais consciente?". A resposta para essas e outras questões que podem aparecer não são fáceis.
-Entretanto o governo brasileiro opitou pela construção de novas usinas e pelo aumento da tarifação no consumo de energia elétrica. 
-Uma medida que poderia ser tomada pelo gorverno, seria a chamada "\textit{exposição da informação}". Ao deixar claro 
-o quanto o consumidor tem gasto de energia elétrica ao longo do mês, isso acarretaria numa consciêntização do consumo de energia elétrica.
+Entretanto o governo brasileiro optou pela construção de novas usinas e pelo aumento da tarifação no consumo de energia elétrica. 
+Uma solução para essa problemática, seria a chamada "\textit{exposição da informação}". Ao deixar claro 
+o quanto o consumidor tem gasto de energia elétrica ao longo do mês, isso acarretaria numa conscientização do consumo de energia elétrica.
 
 % A evolução da tarifa,
 % pode ser observada na \autoref{evolucao-tarifa}
@@ -239,7 +239,7 @@ o quanto o consumidor tem gasto de energia elétrica ao longo do mês, isso acar
 % \FloatBarrier
 
 O trabalho apresentará uma forma barata e eficiente de monitorar a energia elétrica de uma residência em tempo real, disponibilizando informações valiosas ao usuário.
-O sistema também disponibiliza de ferramentas para que 
+O sistema é construido de tal forma que 
 caso o usuário possua o conhecimento necessário o mesmo venha a modificar ou aprimorar o gerenciamento de energia. O sistema nomeado de \textit{Power Monitor}
 traz consigo uma nova forma de enxergar o consumo dos aparelhos presentes em uma residência, trocando o quilowatt-hora pela moeda de circulação no país,
 o real, tal mudança é o principal fator de conscientização, pois aproxima o consumidor dos gastos energéticos.
@@ -249,7 +249,7 @@ o real, tal mudança é o principal fator de conscientização, pois aproxima o 
 
 A motivação deste trabalho partiu da analise da atual conjuntura do cenário energético brasileiro que é baseado na falta de transparência da 
 informação levada ao usuário \cite{ref-conju}. Notando-se a dificuldade de entender o consumo de energia elétrica dos dispositivos presentes em uma 
-residencia, fez-se necessário o desenvolvimento de um sistema de monitoramento para uso consciente da energia elétrica.
+residência, fez-se necessário o desenvolvimento de um sistema de monitoramento para uso consciente da energia elétrica.
 % ter informação em tempo real do consumo de energia em um estabelecimento é muito difícil, pois os equipamentos que proporcionam esse tipo de informação
 % não são acessíveis a todos os brasileiros, apenas companhias de energia ou pessoas com alto grau de estudo conseguem manusear ou entender o dados
 % fornecidos por esse tipo de equipamento. Toda essa privação da informação traz consequências, uma delas é o descaso do brasileiro em relação ao
@@ -259,7 +259,7 @@ residencia, fez-se necessário o desenvolvimento de um sistema de monitoramento 
 
 \section{Objetivos}
 O objetivo deste trabalho é propor um sistema de monitoramento de energia elétrica, de baixo custo, para o uso consciente da mesma. 
-O sistema faz uso de medições e cálculos para uma melhor visualização do consumo de energia. Onde o seu principal diferencial é a troca da unidade de medida 
+O sistema faz uso de medições e cálculos para uma melhor visualização do consumo de energia, onde o seu principal diferencial é a troca da unidade de medida 
 referente ao consumo elétrico de um aparelho pela moeda de circulação no pais.
 
 % O \textit{Power Monitor} é um sistema de computador composto por um servidor \textit{web} e uma interface \textit{web} de fácil comunicação com \textit{hardwares} que possam 
@@ -277,7 +277,7 @@ referente ao consumo elétrico de um aparelho pela moeda de circulação no pais
 
 \section{Metodologia}
 O Power Monitor foi implementado utilizando a linguagem de programação JavaScript que por sua vez se comunica com uma placa de desenvolvimento NodeMCU. 
-O Power Monitor possui um servidor web que é responsável por gravar todos os dados coletados em um banco de dados e fazer a comunicação entre softaware e Hardware. 
+O Power Monitor possui um servidor web que é responsável por gravar todos os dados coletados em um banco de dados e fazer a comunicação entre software e hardware. 
 A interface web consome todos os dados gravados e após trata-los e realizar alguns cálculos o resultado é apresentado em forma de gráficos e alertas.
 
 \section{Levantamento bibliográfico}
@@ -294,7 +294,7 @@ apresentados para o usuário são convertidos para valores monetários.
 
 
 O trabalho \cite{ref-rpc} visa o monitoramento de energia elétrica, desenvolvido para se comunicar com um sistema \textit{web} e com um aplicativo de celular.
-Com o objetico de usar as informações coletadas pelo dispositivo \textit{Powersave} e disponibilizar ao usuário, para que assim poassa conscientezar o consumo de energia elétrica.
+Com o objetivo de usar as informações coletadas pelo dispositivo \textit{Powersave} e disponibilizar ao usuário, para que assim possa conscientizar o consumo de energia elétrica.
 
 \section{Estrutura do Trabalho}
 O trabalho foi estruturado para que se possa mostrar nos próximos capítulos os seguintes conteúdos:
