correção - cap 2 - prof danilo

--- a/textuais/capitulo2.tex
+++ b/textuais/capitulo2.tex
@@ -52,10 +52,10 @@ banco de dados. Sua rápida popularização deve-se a fácil comunicação entre
 
 \subsection[\textit{Fritzing}]{\textit{Fritzing}}\label{fritzing}
 O \textit{Fritzing} é uma iniciativa \textit{open source} que inicialmente foi
-designada a desenvolvedores amadores que gostasse de tirar a sua ideia do papel. Em poucas palavras
+designada a desenvolvedores amadores. Em poucas palavras
 a plataforma auxilia os desenvolvedores por meio de uma interface gráfica nas primeiras montagens com Arduino
 ou outro microcontrolador, sua intuitiva interface proporciona ao usuário uma rápida montagem do circuito em protoboard. O \textit{software} vai além
-e permite com que os desenvolvedores tenha uma visão tanto da protoboar, como do esquemático elétrico. 
+e permite com que os desenvolvedores tenha uma visão tanto da protoboard, como do esquemático elétrico. 
 
 
 \section[\textit{Componentes Físicos}]{\textit{Componentes Físicos}}\label{comp-fisico}
