correção nome tcc - prof sergio

--- a/main.tex
+++ b/main.tex
@@ -46,7 +46,7 @@
 % Informações de dados para CAPA e FOLHA DE ROSTO
 % ---
 
-\titulo{{\normalfont \textbf{PROPOSTA DE UMA FERRAMENTA DE BAIXO CUSTO PARA O MONITORAMENTO DE ENERGIA RESIDENCIAL}}}
+\titulo{{\normalfont \textbf{POWER MONITOR - PROPOSTA DE UMA FERRAMENTA DE BAIXO CUSTO PARA O MONITORAMENTO DE ENERGIA RESIDENCIAL}}}
 \autor{JONATHAN DA SILVA BRAGA}
 \local{NATAL -- RN}
 \data{JULHO DE 2018}
@@ -119,7 +119,7 @@
 		JONATHAN DA SILVA BRAGA
 
 		\vspace*{\fill}
-		\textbf{PROPOSTA DE UMA FERRAMENTA DE BAIXO CUSTO PARA O MONITORAMENTO DE ENERGIA RESIDENCIAL}
+		\textbf{POWER MONITOR - PROPOSTA DE UMA FERRAMENTA DE BAIXO CUSTO PARA O MONITORAMENTO DE ENERGIA RESIDENCIAL}
 		\vspace*{\fill}
 
 		NATAL -- RN\\
