CORREÇÃO TCC - banca finalizada

--- a/pre-textuais/resumo.tex
+++ b/pre-textuais/resumo.tex
@@ -6,9 +6,8 @@ Braga, J. S. \textbf{Proposta de uma ferramenta de baixo custo para o monitorame
 \vspace*{1cm}
 
 
-Este trabalho consiste no desenvolvimento de um sistema domiciliar de monitoramento de energia elétrica de baixo custo, em tempo real.
-Tem como proposta um dispositivo e um sistema que juntos somam a nova realidade de meios para a economia de energia.
-O equipamento tem como base a placa de desenvolvimento NodeMCU e um sensor de corrente que afere o consumo em tempo real de um dispositivo. Através
+Este trabalho possui como objetivo o desenvolvimento de um sistema domiciliar de monitoramento de energia elétrica de baixo custo, em tempo real.
+O sistema tem como base a placa de desenvolvimento NodeMCU e um sensor de corrente que afere o consumo em tempo real de um dispositivo. Através
 dos dados coletados e dos cálculos realizados pelo sistema é possível acompanhar o consumo de energia elétrica de uma forma mais fácil.
 O intuito é que o constante monitoramento possa trazer uma conscientização da economia de energia.
  
@@ -23,11 +22,7 @@ Braga, J. S. \textbf{	Proposal of a low cost tool for residential energy monitor
 University of Rio Grande do Norte, Natal, 2018.
 \vspace*{1cm}	
 	
-This work consists of the development of a real-time home monitoring system for electricity, which is fully customizable.
-It proposes a device and a system that together add the new reality of means for energy saving.
-The equipment is based on the NodeMCU development board and a current sensor that measures the real time consumption of a device. Through
-the data collected and the calculations performed by the system, it is possible to monitor the electricity consumption in an easier way.
-The intention is that constant monitoring can bring an awareness of energy savings.
+The objective of this work is the development of a low-cost real-time home-based energy metering system. The system is based on the NodeMCU development board and a current sensor that measures the real-time consumption of a device. Through the data collected and the calculations made by the system it is possible to monitor the consumption of electricity in an easier way. The intention is that constant monitoring can bring an awareness of the energy economy.
 	
 	\vspace{\onelineskip}
 	\noindent 
