--- a/textuais/capitulo2.tex
+++ b/textuais/capitulo2.tex
@@ -42,7 +42,7 @@ No momento em que a negocição é confirmada a conexão é establecida, criando
 \FloatBarrier
 
 
-\subsection[\textit{SQL}]{\textit{SQL}}\label{sql}
+\subsection[\textit{Structured Query Language}]{\textit{Structured Query Language}}\label{sql}
 Structured Query Language, ou comumente conhecida como SQL é uma linguagem padrão de banco de dados. 
 Diferentemente das outras linguagens de banco de dados a consulta em SQL especifica a forma do resultado e não o caminho para chegar nele. Uma outra
 grande diferença é que a linguagem SQL é declarativa diferindo mais uma vez das outras linguagens que por sua vez são procedurais \cite{ref-sqlhisto}.
