--- a/textuais/introducao.tex
+++ b/textuais/introducao.tex
@@ -5,7 +5,7 @@ impactos ambientais e econômicos. O Brasil por mais que possua em seu territór
 está isento do problema da alta demanda por energia elétrica. Problema que se agravou em 2015 quando o país começou a passar por
 uma crise hídrica \cite{crise-hidrica-2015}.
 
-Como a \autoref{fig:rede_convencional} mostra, a maior parte da energia elétrica gerada no Brasil é por meio de hidrelétricas, essa dependência
+A \autoref{fig:rede_convencional} mostra, a maior parte da energia elétrica gerada no Brasil é por meio de hidrelétricas, essa dependência
 energética junto com a crise hídrica que o país sofreu culminou em uma política de racionamento e aumento dos impostos - taxa inflacionária no
 consumo de energia elétrica - que impactou diretamente a vida de cada cidadão brasileiro, trouxe consequências, como o aumento do 
 custo da energia elétrica.
@@ -285,7 +285,7 @@ Trabalhos relacionados ao monitoramento de energia residencial têm sido mais co
 sem fio, os diversos trabalhos tem se direcionado a desenvolver sistemas utilizando microcontroladores e sensores.
 
 
-\cite{ref-jlgb} foi desenvolvido com base na implementação de um sistema particular de monitoramento de consumo de energia elétrica, em tempo real e não invasivo.
+O trabalho realizado em \cite{ref-jlgb} foi desenvolvido com base na implementação de um sistema particular de monitoramento de consumo de energia elétrica, em tempo real e não invasivo.
 Com o auxílio da plataforma de prototipagem Arduino e dos sensores de corrente e tensão é possível monitorar em tempo real o consumo de uma residência. O intuito principal
 desse trabalho é a conscientização pela economia de energia.
 
